MB-36940: Handle tombstones properly in couchfile_upgrade

A tombstone with no value will make couchstore_open_doc_with_docinfo
return COUCHSTORE_ERROR_DOC_NOT_FOUND. This error should be swallowed
by the upgrade code and a new tombstone copied to the output file
(with the correct namespace).

Change-Id: I7de6405f10e3b77b0f67d6eb98c40636adc40ec8
Reviewed-on: http://review.couchbase.org/118132
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>